--- a/_sass/modularscale/_modularscale.scss
+++ b/_sass/modularscale/_modularscale.scss
@@ -1,17 +1,17 @@
 // Defaults and variables
-@import 'modularscale/vars';
+@use 'modularscale/vars';
 
 // Core functions
-@import 'modularscale/settings';
-@import 'modularscale/pow';
-@import 'modularscale/strip-units';
-@import 'modularscale/sort';
-@import 'modularscale/target';
-@import 'modularscale/function';
-@import 'modularscale/round-px';
+@use 'modularscale/settings';
+@use 'modularscale/pow';
+@use 'modularscale/strip-units';
+@use 'modularscale/sort';
+@use 'modularscale/target';
+@use 'modularscale/function';
+@use 'modularscale/round-px';
 
 // Mixins
-@import 'modularscale/respond';
+@use 'modularscale/respond';
 
 // Syntax sugar
-@import 'modularscale/sugar';
+@use 'modularscale/sugar';
