cleaned up footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="container">
    <div class="full-width">
+       <hr>
     <figcaption>In the beginner’s mind there are many possibilities, but in the experts there are few. — Shunryū Suzuki</figcaption>
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
-      {%- include social.html -%}
-      {%- if site.email -%}
+      {%- include social.html -%} <br>
+      {%- if site.email -%} <br>
       {%- endif -%}
        <br>
        <!-- hitwebcounter Code START -->
