--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,20 +3,11 @@
        <hr>
     <figcaption>In the beginner’s mind there are many possibilities, but in the experts there are few. — Shunryū Suzuki</figcaption>
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
-      {%- include social.html -%} <br>
-      {%- if site.email -%} <br>
+      {%- include social.html -%}
+      {%- if site.email -%}
       {%- endif -%}
-       <br>
        <!-- hitwebcounter Code START -->
            <img src="https://hitwebcounter.com/counter/counter.php?page=13366751&style=0038&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" />
-
-
-
-
-
-
-
-
    </div>
 </footer>
 
