--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -34,23 +34,22 @@ body {
   background-attachment: fixed;
   background-image: url("/assets/images/bg3.jpg");
   background-blend-mode: screen;
-  // animation: gradient 15sease infinite;
+  /* animation: gradient 15sease infinite; */
   line-height: 1.5em;
   margin: 0 auto;
-  padding:2em;
-  //max-width: 60em;
-  font-size:ms(0);
-  min-height: 100vh;
-  display: flex;
+  padding: 2em;
+  font-size: ms(0);
   flex-direction: column;
   text-transform: uppercase;
 
 
-  @media only screen and (max-width: 600px)   {
-
-
-  }
-  @media only screen and (min-width: 601px)   {
+  @media only screen and (max-width: 600px) {
+    background-attachment: scroll; /* Changed from fixed to scroll for mobile */
+    max-width: 100vw; /* Use full width on mobile */
+    background-size: contain; /* Changed from cover to contain to prevent zooming in too much */
+    background-position: center top; /* Position from the top to show more of the image */
+    min-height: 100vh;
+    height: auto;
 
   }
 }
