--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -50,6 +50,7 @@ body {
     background-position: center top; /* Position from the top to show more of the image */
     min-height: 100vh;
     height: auto;
+    padding: 1em;
 
   }
 }
