--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,6 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "minima";
+@import "../_sass/minima";
+@import "../_sass/typography";
+@import "../_sass/faculty";
