--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -1,6 +1,6 @@
 $backgroundc: #000000;
 $maincolor: #ffffff;
-$accent: #0042ec;
+$accent: #bacdfc;
 $accent1: #0042ec;
 $lightcolor: #0042ec;
 $midcolor: #0042ec;
@@ -372,10 +372,11 @@ hr {
   font-size:ms(0);
   line-height: ms(3);
   text-transform: uppercase;
+  letter-spacing: 1px;
   @media only screen and (max-width: 600px) {
     //grid-column: span 6;
     font-size:ms(0);
-    letter-spacing: -1px;
+    letter-spacing: 1px;
   }
 }
 
