new post, background, and talks

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -46,6 +46,21 @@ layout: default
 <span class="four-columns">
   <h1>Speaking</h1>
      <p>
+     Universidad Catolica Boliviana "San Pablo" Cochabamba <br>
+      Speaker <br>
+         Title: Design with Heart <br>
+      2025 <br>
+  </p>
+
+    <hr>
+    <p>
+     Northeastern Illinois University <br>
+      Panel <br>
+      2025 <br>
+     </p>
+    <hr>
+
+     <p>
      DePaul University Panel <br>
       Alumni Panel <br>
       2024 <br>
