--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -1,6 +1,6 @@
-$backgroundc: #000000;
-$maincolor: #ffffff;
-$accent: #bacdfc;
+$backgroundc: #FFFFFF;
+$maincolor: #000000;
+$accent: #fa479f;
 $accent1: #0042ec;
 $lightcolor: #0042ec;
 $midcolor: #0042ec;
