--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -1,9 +1,9 @@
-$backgroundc: #FFFFFF;
-$maincolor: #000000;
-$accent: #fa479f;
-$accent1: #0042ec;
-$lightcolor: #0042ec;
-$midcolor: #0042ec;
+$backgroundc: #000000;
+$maincolor: #cfcfcf;
+$accent: #7a9f54;
+$accent1: #309a08;
+$lightcolor: #5e71af;
+$midcolor: #988374;
 
 
 
