--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -1,6 +1,6 @@
 $backgroundc: #000000;
 $maincolor: #cfcfcf;
-$accent: #7a9f54;
+$accent: #ecc19d;
 $accent1: #309a08;
 $lightcolor: #5e71af;
 $midcolor: #988374;
