--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -6,8 +6,8 @@
 
 // Define defaults for each variable.
 
-$base-font: 'niveau-grotesk', monospace;
-$accent-font: 'niveau-grotesk', monospace;
+$base-font: 'paradroid-mono-soft', monospace;
+$accent-font: 'paradroid-mono-soft', monospace;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
