new about christian

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,8 +8,8 @@ layout: default
     Bio
     </h1>
     <p>
-        A multidisciplinary designer, photographer, artist, and storyteller, blah blah blah... <br>
-        [Insert long list of adjectives and jargon]. <br>
+        A multidisciplinary designer, photographer, artist, and storyteller, blah blah blah... [Insert long list
+        of adjectives and jargon]. I do things. <br>
     </p>
 
 
@@ -17,13 +17,13 @@ layout: default
      Information
   </h1>
   <p>
-      Product designer @
+      Sr. Product designer @
       <a href="https://digital.pwc.com/en.html" target="_blank">PwC </a>
       <br>
       Founder of the
       <a  href="http://www.chicagodesignbook.club" target="_blank">Chicago Graphic Design Club</a>
       <br>
-      Host of
+      Host @
       <a href="https://anchor.fm/chicagographicdesignclub" target="_blank">Underscore</a>
       <br>
       Design educator @
