--- a/_sass/faculty.scss
+++ b/_sass/faculty.scss
@@ -1,6 +1,6 @@
-$backgroundc: #cfcfcf;
+$backgroundc: #aab9bc;
 $maincolor: #000000;
-$accent: #755d4a;
+$accent: #7c634e;
 $accent1: #309a08;
 $lightcolor: #5e71af;
 $midcolor: #988374;
@@ -34,6 +34,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: url("/assets/images/bg3.jpg");
+  //background-blend-mode: screen;
+  /* animation: gradient 15sease infinite; */
   line-height: 1.5em;
   margin: 0 auto;
   padding: 2em;
@@ -41,19 +43,18 @@ body {
   flex-direction: column;
   text-transform: uppercase;
 
+
   @media only screen and (max-width: 600px) {
-    background-attachment: scroll;
-    max-width: 100vw;
-    background-size: cover;  // ← change from contain to cover
-    background-position: center center;
+    background-attachment: scroll; /* Changed from fixed to scroll for mobile */
+    max-width: 100vw; /* Use full width on mobile */
+    background-size: contain; /* Changed from cover to contain to prevent zooming in too much */
+    background-position: center top; /* Position from the top to show more of the image */
     min-height: 100vh;
-    min-height: -webkit-fill-available;
     height: auto;
     padding: 1em;
+
   }
 }
-
-
 
 ::selection {
   background: $maincolor;
